test/build_failure/dereference.expect
ERROR: Cannot assign to immutable variable
File: "", line 2, charactors 4-13

rillc: There are warnings or errors.
