test/build_failure/dereference.rill
def main(): unit {
    *&10 = 10;
}
